@@ -1,11 +1,11 @@
-package io.github.javialc.java.hexagonalarchitecture.application.adapters;
+package io.github.javialc.java.hexagonalarchitecture.application.service.impl;
 
 import io.github.javialc.java.hexagonalarchitecture.domain.models.Capsule;
 import io.github.javialc.java.hexagonalarchitecture.domain.models.FavouriteCapsule;
 import io.github.javialc.java.hexagonalarchitecture.domain.models.FavouriteCapsules;
 import io.github.javialc.java.hexagonalarchitecture.domain.ports.inbound.FavouriteCapsulesDataBasePort;
 import io.github.javialc.java.hexagonalarchitecture.domain.ports.inbound.SpaceXClientPort;
-import io.github.javialc.java.hexagonalarchitecture.domain.ports.outbound.FavouriteCapsulesServicePort;
+import io.github.javialc.java.hexagonalarchitecture.domain.services.FavouriteCapsulesService;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -14,7 +14,7 @@ import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class FavouriteCapsulesServiceAdapter implements FavouriteCapsulesServicePort {
+public class FavouriteCapsulesServiceImpl implements FavouriteCapsulesService {
     
     private final FavouriteCapsulesDataBasePort favouriteCapsulesDataBasePort;
     private final SpaceXClientPort spaceXClientPort;
@@ -34,7 +34,7 @@ public class FavouriteCapsulesServiceAdapter implements FavouriteCapsulesService
         final List<FavouriteCapsule> favouriteCapsules = favouriteCapsulesDataBasePort.getFavouriteCapsules();
         final List<Capsule> capsules = favouriteCapsules.stream()
                 .map(f -> spaceXClientPort.getCapsuleById(f.getCapsuleId()))
-                .collect(Collectors.toList());
+                .toList();
         return FavouriteCapsules.builder().capsules(capsules).build();
     }
 }
